# manappuram_voice_agent

./: app.py  config.py  main.py  pyproject.toml  render.yaml  requirements.txt  vapi.xlsx  vapi_voice_agent.py  vapi_voice_agent_ui.py
static/: style.css
templates/: index.html
